# GAMES101-Homework-record

./: README.md
Assignment1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
